--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
+encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
-encoding//src/main/webapp/resource/message/_interface-Parameters.htm=UTF-8
+encoding//src/main/webapp/resource/message/interface-Parameters.htm=UTF-8
 encoding//src/main/webapp/resource/template/pageTemplate.htm=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
